# sdpo

./: .env.example  .gitignore  main.py  pyproject.toml
analysis/: ANALYSIS.md  aggregate_experiment_4_ventiles.py  experiment_1_reward_on_regen.py  experiment_2_5_teacher_prompt_ablation.py  experiment_2_kl_divergence.py  experiment_3_5_gradient_norm.py  experiment_3_gradient_similarity.py  experiment_3_kl_convergence.py  experiment_4_sdpo_iteration.py  experiment_4_structural_entropy.py  experiment_5_constrained_regen.py  experiment_convergence.py  utils.py
analysis/experiment_8_correction_head/: model.py  train.py
data_modules/: __init__.py
data_modules/livecodebench/: __init__.py  code_execution.py  dataset.py  feedback.py  rollout.py  validation.py
experiments/lcb/: __init__.py
experiments/lcb/qwen_1_7/: __init__.py  config.py  run_all.sh  run_async_experiment.py  run_distill_on_regen.sh  run_distill_on_regen_with_attempt.sh  run_env_feedback_only.sh  run_env_feedback_with_attempt.sh  run_env_feedback_with_prior.sh  run_experiment.py  run_full_feedback.sh  timing_test.py
inference/: __init__.py  completion_queue.py  start_server.py  vllm_client.py
training/: __init__.py  async_sdpo.py  sdpo.py
validators/: validator.py
validators/fineweb/: fineweb_validator.py
validators/ifeval/: ifeval_validator.py  instructions.py  instructions_registry.py  instructions_util.py
validators/livecodebench/: livecodebench_validator.py  test_livecodebench_validator.py
validators/mmlu/: mmlu_validator.py
